--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,36 +27,6 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker buildx build --platform linux/amd64 -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:latest --push .
-
-  deploy:
-    name: Deploy to GKE
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Authenticate with Google Cloud
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-
-      - name: Set GCP project
-        run: gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-
-      - name: Authenticate kubectl
-        run: gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_CLUSTER_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
-
-      - name: Deploy to GKE
-        run: kubectl apply -f k8s-deployment.yaml
-
-      - name: Integration Tests
-        run: |
-          # Run your integration tests here
-          if ! ./run-tests.sh; then
-            echo "Integration tests failed, rolling back..."
-            kubectl rollout undo deployment my-app
-            exit 1
-          fi
+          docker buildx build --platform linux/amd64 \
+            -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:latest \
+            --push .
