--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Configure Docker for gcloud
         run: gcloud auth configure-docker
 
+      - name: Debug GCP_PROJECT_ID and Docker Tag
+        run: |
+          echo "GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}"
+          echo "Docker Tag: gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:latest"
+
       - name: Build and push Docker image
         run: |
           docker buildx build --platform linux/amd64 \
